--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>MoodBase – Hangulatválasztó</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/index.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Inter+Tight:wght@300;400;600&display=swap" rel="stylesheet">
 
 </head>
@@ -23,7 +23,11 @@
         <a href="{{ url_for('mood_page', slug=mood['slug']) }}" class="mood-link">
             
             <div class="mood-card" data-theme="{{ mood['slug'] }}">
-                <div class="mood-emoji">{{ mood['emoji'] }}</div>
+                <div class="mood-emoji">
+                    <img src="{{ mood['avatars']['default'] }}" 
+                         alt="{{ mood['name'] }}"
+                         style="width: 64px; height: 64px;">
+                </div>
                 <h3 class="mood-title">{{ mood['name'] }}</h3>
                 <p class="mood-desc">{{ mood['description'] }}</p>
             </div>
